--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
   <script src="https://kit.fontawesome.com/fc1d6ae1da.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <h1>Teste 2 Full Screen Mode Mobile</h1>
-  <button onclick="entrarModoTelaCheia()">Entrar em modo tela cheia</button>
+  <!-- <div class="opt">
+    <h1>Teste 2 Full Screen Mode Mobile</h1>
+  </div> -->
+  <div class="cont" >
+    <i onclick="entrarModoTelaCheia()" class="fa-solid fa-dumbbell"></i>
+  </div>
 
 
   <script src="script.js"></script>
