--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css"/>
   <link rel="icon" href="data:,">
   <script src="https://kit.fontawesome.com/fc1d6ae1da.js" crossorigin="anonymous"></script>
+  <link rel="manifest" href="/manifest.json">
 </head>
 <body>
   <!-- <div class="opt">
