--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <div class="cont" >
     <i onclick="entrarModoTelaCheia()" class="fa-solid fa-dumbbell"></i>
   </div>
+  <section class="login">
+    <h1>Login</h1>
+  </section>
 
 
   <script src="script.js"></script>
