--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   </div> -->
   <div class="cont" >
     <i onclick="entrarModoTelaCheia()" class="fa-solid fa-dumbbell"></i>
+    <a href="login.html">Login</a>
   </div>
+
   <section class="login">
     <h1>Login</h1>
   </section>
