--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" href="data:,">
   <script src="https://kit.fontawesome.com/fc1d6ae1da.js" crossorigin="anonymous"></script>
   <link rel="manifest" href="/manifest.json">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
 <body>
   <!-- <div class="opt">
@@ -15,7 +17,6 @@
   </div> -->
   <div class="cont" >
     <i onclick="entrarModoTelaCheia()" class="fa-solid fa-dumbbell"></i>
-    <a href="login.html">Login</a>
   </div>
 
   <section class="login">
